(lang dune 3.13)

(using melange 0.1)

(name jsoo_hello)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (allow_empty)
 (name jsoo_hello)
 (synopsis "A short synopsis")
 (description "A longer description")
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
